fixed a bug where, if you entered coordinates such that a ship would not fit on the board, then fixed those coordinates, an error message would flash claiming that ships were overlapping because any ships listed before the ship that triggered the fit error would end up being placed on the board multiple times

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,11 +23,8 @@ body {
     width: 1006px;
 }
 
-.board-label{
-    font-family: 'Battambang', sans-serif;
-}
-
 .board-label {
+    font-family: 'Battambang', sans-serif;
     color: white;
 }
 
@@ -62,6 +59,7 @@ body {
 .result-image {
     height: 400px;
     width: auto;
+    padding-bottom: 10px;
 }
 
 .row {
@@ -96,7 +94,7 @@ body {
     width: 50px;
 }
 
-.start-game {
+.start-game, .play-again {
     background-color: #007BFF;
     color: white;
     padding: 15px 30px; 
@@ -109,21 +107,23 @@ body {
     transition: background-color 0.3s, box-shadow 0.3s; 
 }
   
-.start-game:hover {
+.start-game:hover, .play-again:hover {
     background-color: #0056b3; 
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); 
 }
   
-.start-game:active {
+.start-game:active, .play-again:active {
     background-color: #004080; 
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); 
 }
   
-.start-game:focus {
+.start-game:focus, .play-again:focus {
     outline: none; 
     box-shadow: 0px 0px 0px 4px rgba(0, 123, 255, 0.5); 
 }
 
 .win-announcement {
     font-size: 48px;
+    margin-top: 0;
+    padding-top: 0;
 }
